<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.myresume.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_about"
            android:name="com.example.myresume.ui.about.AboutFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_about"/>

    <fragment
            android:id="@+id/navigation_experience"
            android:name="com.example.myresume.ui.experience.ExperienceFragment"
            android:label="@string/title_experience"
            tools:layout="@layout/fragment_experience"/>

    <fragment
            android:id="@+id/navigation_contact"
            android:name="com.example.myresume.ui.contact.ContactFragment"
            android:label="@string/title_contact"
            tools:layout="@layout/fragment_contact"/>
</navigation>