<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imvCornerStroke"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="14dp"
            android:src="@drawable/profile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/verified"/>

    <TextView
            android:id="@+id/myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginStart="14dp"
            android:text="@string/my_name"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_font_family"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imvCornerStroke"/>

    <TextView
            android:id="@+id/myBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="14dp"
            android:text="@string/my_bio"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_font_family"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myName"/>

    <TextView
            android:id="@+id/myDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_desc"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_font_family"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/myBio"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>