<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.contact.ContactFragment">

    <GridLayout
            android:id="@+id/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            app:layout_constraintStart_toStartOf="parent">
        <ImageView
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/about"
        />
        <TextView
                android:id="@+id/about_me_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/about_me"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="100"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
        />
    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_me"
    >
        <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/about"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="100"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
            android:id="@+id/education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_about">
        <ImageView
                android:id="@+id/img_grad"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/grad"
        />
        <TextView
                android:id="@+id/education_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/education"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="100"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_about"
        />
    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/education"
    >
        <TextView
                android:id="@+id/miu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="14dp"
                android:text="@string/miu"
                android:textColor="@color/orange"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="300"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:id="@+id/master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/master"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="100"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/miu"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/master_grad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="Oct 2021 – Jun 2024"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="100"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/master"
                app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_bachelor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_master"
    >
        <TextView
                android:id="@+id/must"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="14dp"
                android:text="@string/must"
                android:textColor="@color/orange"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="300"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:id="@+id/bachelor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/bachelor"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="100"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/must"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/bachelor_grad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="Sep 2014 – Jun 2018"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_font_family"
                android:textFontWeight="100"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/bachelor"
                app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>